--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 /* nav banner start  */
 .nav-banner-container{
     color: white;
-    background-image: url('./image/background.jpg'),linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.9));
+    background-image: url('./image/background.jpg'),linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.6));
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
@@ -61,3 +61,67 @@
     color: white;
 }
 /* nav banner end  */
+.Service-container{
+    display: flex;
+    background-color: black;
+    color: white;
+    justify-content: space-around;
+    align-items: center;
+    padding: 30px;
+    height: 80vh;
+}
+.service-btn{
+    border-radius: 30px;
+    font-size: 18px;
+}
+.service-title{
+    font-size: 30px;
+    color: white;
+    margin-top: 20px;
+}
+.service-text{
+    font-size: 16px;
+}
+.service-list{
+    margin-left: 15px;
+}
+.author-container{
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+    gap: 30px;
+}
+.author-img{
+    width: 100px;
+    height: 100px;
+    border-radius:50%;
+}
+.author-info{
+    margin-left: 10px;
+}
+.profile-container{
+    display: flex;
+    align-items: center;
+    border-right: 1px solid orangered;
+    padding-right: 100px;
+
+    
+}
+.service-icon{
+    width: 100px;
+    margin-bottom: 20px;
+}
+.box{
+    background-color: white;
+    padding: 20px;
+    color: black;
+    text-align: center;
+    border-radius: 10px;
+    width: 230px;
+    
+}
+.all-box{
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+}
