--- a/style.css
+++ b/style.css
@@ -1,127 +1,157 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 /* nav start  */
-.nav-container{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: rgb(182, 181, 181);
-    padding: 20px 10px;
+.nav-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(182, 181, 181);
+  padding: 20px 10px;
 }
-.nav-logo{
-    display: flex;
-    color: aqua;
-    align-items: center;
+.nav-logo {
+  display: flex;
+  color: aqua;
+  align-items: center;
 }
-.items, .items>li , .items>li>a{
-    display: flex;
-    list-style: none;
-    margin-right: 20px ;
-    text-decoration: none;
-    color: white;
+.items,
+.items > li,
+.items > li > a {
+  display: flex;
+  list-style: none;
+  margin-right: 20px;
+  text-decoration: none;
+  color: white;
 }
 /* nav end  */
 /* nav banner start  */
-.nav-banner-container{
-    color: white;
-    background-image: url('./image/background.jpg'),linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.6));
-    height: 100vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-blend-mode: overlay;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+.nav-banner-container {
+  color: white;
+  background-image: url("./image/background.jpg"),
+    linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6));
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: overlay;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
-.nav-banner-title{
-    font-size: 60px;
-    color: white;
-    font-weight: 800;
+.nav-banner-title {
+  font-size: 60px;
+  color: white;
+  font-weight: 800;
 }
-.primary{
-    color: orangered;   
+.primary {
+  color: orangered;
 }
-.nav-banner-text{
-    font-size: 18px;
-    margin: 10px 0px;
+.nav-banner-text {
+  font-size: 18px;
+  margin: 10px 0px;
 }
-.btn{
-    padding: 15px 30px;
-    border: none;
-    border-radius: 5px;
-    margin-right: 20px;
+.btn {
+  padding: 15px 30px;
+  border: none;
+  border-radius: 5px;
+  margin-right: 20px;
 }
-.bg-primary{
-    background-color: orangered;
-    color: white;
+.bg-primary {
+  background-color: orangered;
+  color: white;
 }
 /* nav banner end  */
-.Service-container{
-    display: flex;
-    background-color: black;
-    color: white;
-    justify-content: space-around;
-    align-items: center;
-    padding: 30px;
-    height: 80vh;
+/* Service-container start  */
+.Service-container {
+  display: flex;
+  background-color: black;
+  color: white;
+  justify-content: space-around;
+  align-items: center;
+  padding: 30px;
+  height: 80vh;
 }
-.service-btn{
-    border-radius: 30px;
-    font-size: 18px;
+.service-btn {
+  border-radius: 30px;
+  font-size: 18px;
 }
-.service-title{
-    font-size: 30px;
-    color: white;
-    margin-top: 20px;
+.service-title {
+  font-size: 30px;
+  color: white;
+  margin-top: 20px;
 }
-.service-text{
-    font-size: 16px;
+.service-text {
+  font-size: 16px;
 }
-.service-list{
-    margin-left: 15px;
+.service-list {
+  margin-left: 15px;
 }
-.author-container{
-    display: flex;
-    margin-top: 20px;
-    align-items: center;
-    gap: 30px;
+.author-container {
+  display: flex;
+  margin-top: 20px;
+  align-items: center;
+  gap: 30px;
 }
-.author-img{
-    width: 100px;
-    height: 100px;
-    border-radius:50%;
+.author-img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
 }
-.author-info{
-    margin-left: 10px;
+.author-info {
+  margin-left: 10px;
 }
-.profile-container{
-    display: flex;
-    align-items: center;
-    border-right: 1px solid orangered;
-    padding-right: 100px;
-
-    
+.profile-container {
+  display: flex;
+  align-items: center;
+  border-right: 1px solid orangered;
+  padding-right: 100px;
 }
-.service-icon{
-    width: 100px;
-    margin-bottom: 20px;
+.service-icon {
+  width: 100px;
+  margin-bottom: 20px;
 }
-.box{
-    background-color: white;
-    padding: 20px;
-    color: black;
-    text-align: center;
-    border-radius: 10px;
-    width: 230px;
-    
+.box {
+  background-color: white;
+  padding: 20px;
+  color: black;
+  text-align: center;
+  border-radius: 10px;
+  width: 230px;
 }
-.all-box{
-    display: flex;
-    gap: 10px;
-    margin-top: 10px;
+.all-box {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+/* phone-call-container start  */
+.phone-call-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 60%;
+  margin: auto;
+  background-color: orangered;
+  border-radius: 10px;
+  padding: 50px;
+  margin-top: -90px;
+  color: white;
+}
+.phone-call {
+  display: flex;
+  align-items: center;
+  border-right: 1px solid gray;
+  padding-right: 80px;
+}
+.phone-call-text {
+  margin: 0px 20px;
+  font-size: 16px;
+}
+.phone-call-number {
+  margin-left: 20px;
+}
+b {
+  font-size: 30px;
 }
