--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
 /* nav start  */
 .nav-container {
@@ -168,7 +169,7 @@ b {
   margin-top: 100px;
 }
 .blog-info-title{
-  font-size: 33px;
+  font-size: 30px;
 }
 .blog-info-text{
   font-size: 16px;
@@ -182,7 +183,7 @@ b {
 }
 .card{
   width: 250px;
-  height: 320px;
+  height: 350px;
   box-shadow: 4px 8px 4px gray;
   border-radius: 10px; 
 }
@@ -200,4 +201,38 @@ b {
   margin: 10px 0px;
 }
 /* footer start  */
-
+.footer-container{
+  background-image: url('./image/footer-bg.png'),linear-gradient(rgba(10, 10, 10,0.9),rgba(0, 0, 0,0.9));
+  color: white;
+}
+.footer-all-colum{
+  padding: 50px;
+}
+.fa-brands{
+  margin-right:10px ;
+}
+.footer-all-colum{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.colum-1-text{
+  margin: 20px 0px;
+}
+.colum{
+  list-style: none;
+}
+.colum-title{
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+hr{
+  width: 80%;
+  margin: auto;
+}
+.copy-right{
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  color: white;
+}
